Refactor code structure for improved readability and maintainability

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Error Technologies",
-  "short_name": "Error Tech",
+  "name": "NavakarNK",
+  "short_name": "NavakarNK",
   "theme_color": "#f32121",
   "background_color": "#b7dfff",
   "display": "standalone",
